# minecraft-regions-tool

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: chunk.rs  constants.rs  lib.rs  main.rs  nbt.rs  region_file.rs  scan.rs  utils.rs  world_folder.rs
