[package]
name = "minecraft-regions-tool"
version = "0.1.0"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
structopt = "0.3.18"
scheduled-thread-pool = "0.2.5"
num_cpus = "1.13.0"