[package]
name = "minecraft-regions-tool"
version = "0.5.0"
authors = ["trivernis <trivernis@protonmail.com>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
description = "A utility for minecraft region files"
repository = "https://github.com/Trivernis/minecraft-regions-tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3.4"
structopt = "0.3.18"
rayon = "1.4.0"
indicatif = "0.15.0"
log = "0.4.11"
env_logger ="0.7.1"
colored = "2.0.0"
flate2 = {version = "1.0", features = ["zlib-ng-compat"]}